<?xml version="1.0"?>
<package format="3">
  <name>dingo_control</name>
  <version>0.1.8</version>
  <description>Controllers for Dingo</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <exec_depend>controller_manager</exec_depend> -->
  <!-- <exec_depend>interactive_marker_twist_server</exec_depend> -->
  <!-- <exec_depend>diff_drive_controller</exec_depend> -->
  <!-- <exec_depend>joint_state_controller</exec_depend> -->
  <exec_depend>joy</exec_depend>
  <!-- <exec_depend>ridgeback_control</exec_depend> -->
  <!-- <exec_depend>robot_localization</exec_depend> -->
  <exec_depend>teleop_twist_joy</exec_depend>
  <!-- <exec_depend>topic_tools</exec_depend> -->
  <exec_depend>twist_mux</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
