<?xml version="1.0"?>
<package format="2">
  <name>dingo_description</name>
  <version>0.0.0</version>
  <description>The dingo_description package</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  
  <license>BSD</license>

  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
