<?xml version="1.0"?>
<package format="3">
  <name>dingo_description</name>
  <version>0.1.8</version>
  <description>The dingo_description package</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
	<depend>velodyne_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
