<?xml version="1.0"?>
<package>
  <name>dingo_msgs</name>
  <version>0.1.0</version>
  <description>Messages exclusive to Dingo, especially for representing low-level motor commands and sensors.</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <maintainer email="jhiggins@clearpathrobotics.com">Jason Higgins</maintainer>

  <license>BSD</license>

  <author email="jhiggins@clearpathrobotics.com">Jason Higgins</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
