<?xml version="1.0"?>
<package format="3">
  <name>dingo_msgs</name>
  <version>0.1.8</version>
  <description>Messages exclusive to Dingo, especially for representing low-level motor commands and sensors.</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <maintainer email="jhiggins@clearpathrobotics.com">Jason Higgins</maintainer>

  <license>BSD</license>

  <author email="jhiggins@clearpathrobotics.com">Jason Higgins</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
	<depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  	<build_type>ament_cmake</build_type>
  </export>
</package>
