<?xml version="1.0"?>
<package format="2">
  <name>dingo_navigation</name>
  <version>0.0.0</version>
  <description>Launch files and code for autonomous navigation of the Dingo</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>

  <export>
  </export>
</package>
